--- a/turf_test.CSS
+++ b/turf_test.CSS
@@ -1,3 +1,24 @@
 #mapid { height: 180vh;
     width: 100%;
  }
+
+ #Loop_stats
+ table,
+td {
+    border: 1px solid #333;
+}
+thead,
+tfoot {
+    background-color: #333;
+    color: #fff;
+}
+
+#summarize_stats
+td {
+    border: 1px solid #333;
+}
+thead,
+tfoot {
+    background-color: #333;
+    color: #fff;
+}
