--- a/turf_test.CSS
+++ b/turf_test.CSS
@@ -1,8 +1,25 @@
-#mapid { height: 180vh;
-    width: 100%;
+body{
+    min-height: 100vh;                  /* 1 */
+    display: grid;                      /* 2 */
+    grid-template-columns: repeat(2,1fr);   /* 3 */
+    grid-template-rows: repeat(4,fr); 
+}
+
+#utilisateur{
+    grid-row:1;
+    grid-column:1;
+}
+#mapid {
+    height: auto;
+    width: auto;
+    grid-row: 1 ;
+    grid-column:2;
  }
 
- #Loop_stats
+ #Loop_stats{
+    grid-row: 2;
+    grid-column: 1;
+ }
  table,
 td {
     border: 1px solid #333;
@@ -13,7 +30,10 @@ tfoot {
     color: #fff;
 }
 
-#summarize_stats
+#summarize_stats{
+    grid-row: 2;
+    grid-column: 2;
+}
 td {
     border: 1px solid #333;
 }
@@ -21,4 +41,16 @@ thead,
 tfoot {
     background-color: #333;
     color: #fff;
+}
+
+#loop_time{
+    grid-row:4;
+    grid-column:1 ;
+
+}
+
+#points_time{
+    grid-row:4;
+    grid-column:2 ;
+
 }
